k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nodeapp
  labels:
    app.kubernetes.io/name: nodeapp
    app.kubernetes.io/part-of: devops-test
